--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -34,7 +34,7 @@
                         <div class="mbr-navbar__column">
 
 
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('index')}}">File to Extract on Server</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('calculationReplacement')}}">Calculation Replacement</a></li>  <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('siteMigration')}}">Site Migration</a></li> </ul>                                
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('index')}}">File to Extract on Server</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('calculationReplacement')}}">Calculation Replacement</a></li> </ul>                                
      
                             
                         </div>
@@ -86,10 +86,10 @@
                                 <input type="text" class="form-control" name="site" required="" placeholder="site*" data-form-field="site">
                             </div>                            
                             <div class="form-group">
-                                <input type="email" class="form-control" name="username" required="" placeholder="username*" data-form-field="username">
+                                <input type="text" class="form-control" name="username" required="" placeholder="username*" data-form-field="username">
                             </div>
                             <div class="form-group">
-                                <input type="tel" class="form-control" name="password" required="" placeholder="password" data-form-field="password">
+                                <input type="password" class="form-control" name="password" required="" placeholder="password" data-form-field="password">
                             </div>
                             <div class = "form-group">
                                 <input type=file name="file[]" multiple ="">
