--- a/app/templates/calculationReplacement.html
+++ b/app/templates/calculationReplacement.html
@@ -34,7 +34,7 @@
                         <div class="mbr-navbar__column">
 
 
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('index')}}">File to Extract on Server</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('calculationReplacement')}}">Calculation Replacement</a></li>  <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('siteMigration')}}">Site Migration</a></li> </ul>                                
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('index')}}">File to Extract on Server</a></li><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="{{url_for('calculationReplacement')}}">Calculation Replacement</a></li> </ul>                                
      
                             
                         </div>
